# tdscript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.cc  config.h.in  update_restart.sh  version.h.in
example/: main.cc
include/tdscript/: client.h
lib/: CMakeLists.txt
src/: client.cc
test/: 01_client.cc  02_save_load.cc  04_https.cc  05_wiktionary.cc  06_dict_exerting.cc  07_dict_damper.cc  09_dict_architecture.cc  10_dict_difference.cc  11_dict_vile.cc  12_dict_slingshot.cc  13_dict_quarters.cc  14_dict_quarter.cc  15_dict_tuple.cc  16_dict_quintuple.cc  17_dict_nice.cc  18_dict_see_also.cc  19_dict_see.cc  20_dict_see.cc  21_dict_see.cc  22_dict_symbol.cc  23_dict_diktuma.cc  24_dict_somniferum.cc  25_dict_abk.cc  26_dict_so.cc  27_dict_va.cc  28_regex.cc  29_eth.cc  2_save_load.cc  3_https.cc  3_xml.cc  4_https.cc  5_wiktionary.cc  6_dict_exerting.cc  8_dict_raffle.cc  client_tdjson_test.cc  client_test.cc  epoll_test.cc  save_load_test.cc
